@@ -1,3 +1,6 @@
+2007-12-27
+"MyWord" added the DictFile class
+
 2007-12-23
 Added the "Installer"
 
